mais mudanças no estilo

--- a/produtos/templates/produtos/detail.html
+++ b/produtos/templates/produtos/detail.html
@@ -12,7 +12,7 @@
         <ul>
             <li><span class="texto-comum">Nome:</span> {{ produto.name }}</li>
             <li><span class="texto-comum">Preço:</span> {{ produto.preço }} R$</li>
-            <li><span class="texto-comum">Local:</span> {{ produto.Local }}</li>
+            <li><span class="texto-comum">Local:</span> {{ produto.local.nome }}</li>
         </ul>
     </section>
     <hr>
