--- a/produtos/templates/produtos/Produtos.html
+++ b/produtos/templates/produtos/Produtos.html
@@ -13,7 +13,7 @@
       /></a>
       <p>{{ produto.name }}</p>
       <p>R$ {{ produto.preço }}</p>
-      <p>Local: {{ produto.Local }}</p>
+      <p>Local: {{ produto.local.nome }}</p>
     </article>
     {% endfor %}
   </section>
