--- a/user/templates/user/config_page.html
+++ b/user/templates/user/config_page.html
@@ -8,10 +8,10 @@ Perfil de usuário
 {% block content %}
 
 <div class="user-opt">
-        <button><a href="{% url 'addlocal' %}">Adicionar local</a></button>
-        <button><a href="{% url 'favoritos' %}">Locais favoritos</a></button>
-        <button><a href="{% url 'fale-conosco' %}">Fale conosco</a></button>
-        <button><a href="{% url 'logout' %}">Logout</a></button>
+        <a class="config-button" href="{% url 'addlocal' %}">Adicionar local</a>
+        <a class="config-button" href="{% url 'favoritos' %}">Locais favoritos</a>
+        <a class="config-button" href="{% url 'fale-conosco' %}">Fale conosco</a>
+        <a class="config-button" href="{% url 'logout' %}">Logout</a>
 </div>
 
 {% endblock content %}
