--- a/static/style.css
+++ b/static/style.css
@@ -39,10 +39,24 @@ header {
   }
 }
 
+#logo{
+  position: absolute;
+  left: 40px;
+  top: 19.5px
+}
+
 header h1 {
   font-size: 1.5em;
   display: inline-block;
   margin-right: 670px;
+}
+
+header ul {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  margin: 0;
+  padding: 0;
 }
 
 header li {
