--- a/staticfiles/style.css
+++ b/staticfiles/style.css
@@ -4,7 +4,7 @@
   --tertiary-color: #f44d27;
   --secondary-color-light: #ffeb55; /*botões*/
   --tertiary-color-light: #ff6d28;
-  --bg-color: #110101; /*texto*/
+  --bg-color: #000000; /*texto*/
   --secondary-bg-color: #050101;
   --color-shadow: #f4f4f4;
   font-size: 16px;
@@ -68,14 +68,22 @@ h2{
   padding: 50px;
 }
 
-body{
+body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   background-size: cover;
   background-position: center;
+  background-image: (0deg, transparent, transparent);  
   background-repeat: no-repeat;
 }
+
+
+body,
+body * {
+  color: var(--bg-color);
+}
+
 
 footer{
   margin-top: auto;
@@ -145,6 +153,7 @@ footer{
   margin: 1rem;
   padding: 1.25rem;
   width: 285px;
+  background-color: #ffffff;
 }
 
 .small-card {
@@ -209,12 +218,38 @@ button {
 }
 
 button img {
-  width: 40px; /* Largura da imagem */
-  height: 40px; /* Altura da imagem */
-  margin-right: 5px; /* Espaço entre a imagem e o texto */
+  width: 40px; 
+  height: 40px; 
+  margin-right: 5px; 
 }
 
 button:hover {
   background-color: var(--secondary-color-light);
   border: 2px solid var(--secondary-color-light);
+}
+
+.pagina-busca {
+  text-align: center;
+}
+
+.pagina-busca h2 {
+  margin-bottom: 0;
+}
+
+.pagina-busca form {
+  display: inline-block;
+}
+
+.pagina-busca input {
+  width: 500px;
+  padding: 8px;
+}
+
+.texto-comum { /* Classe que deixa o fundo Branco*/
+  background-color: rgb(255, 255, 255); 
+  display: inline;
+}
+
+.larger-button {
+  width: 200px; 
 }
