--- a/user/templates/user/config_page.html
+++ b/user/templates/user/config_page.html
@@ -7,17 +7,16 @@ Perfil de usuário
 
 {% block content %}
 
-<div class="user-info">
-    <img src="{% static 'profile.png' %}" width="40" height="40">
-    {{user.username}}
-</div>
+    
+   
 <div class="user-opt">
-    <ul>
+    <ul class="user-links-container">
         <li><a href="{% url 'addlocal' %}">Adicionar local</a></li>
         <li><a href="{% url 'favoritos' %}">Locais favoritos</a></li>
         <li><a href="{% url 'fale-conosco' %}">Fale conosco</a></li>
-        <a href="{% url 'logout' %}">Logout</a>
+        <li><a href="{% url 'logout' %}">Logout</a></li>
     </ul>
 </div>
-
+<img src="{% static 'profile.png' %}" width="40" height="40">
+<div class="user-name">{{ user.username }}</div>
 {% endblock content %}
