--- a/static/style.css
+++ b/static/style.css
@@ -218,6 +218,7 @@ footer{
     margin: 1rem;
     padding: 1.25rem;
     width: 300px; 
+    height: 400px;
     background-color: #ffffff;
     text-align: center; 
 }
